--- a/note/ 第1周-Web框架之 Server与路由树 /2. Web框架概览-Beego框架分析.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /2. Web框架概览-Beego框架分析.md
@@ -170,3 +170,5 @@ func TestUserController(t *testing.T) {
 ```
 
 此时访问`localhost:8082/user`是无法得到响应的.只有访问`localhost:8081/user`能够得到响应.
+
+1个进程监听2个端口的使用场景:实时更新配置.例如同一个进程内,端口8081可以修改8082的内存
