--- a/note/ 第1周-Web框架之 Server与路由树 /6. Server详解与面试要点.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /6. Server详解与面试要点.md
@@ -144,7 +144,7 @@ func TestServer(t *testing.T) {
 工程结构如下:
 
 ```
-(base) yanglei@yuanhong composingHandlerAndAddStart % tree ./
+(base) root@yuanhong composingHandlerAndAddStart % tree ./
 ./
 ├── httpServer.go
 ├── httpServer_test.go
@@ -219,7 +219,7 @@ func TestServer(t *testing.T) {
 工程结构如下:
 
 ```
-(base) yanglei@yuanhong composingHandlerAndAddStart % tree ./
+(base) root@yuanhong composingHandlerAndAddStart % tree ./
 ./
 ├── httpServer.go
 ├── httpServer_test.go
@@ -246,7 +246,7 @@ type HTTPSServer struct {
 - 工程结构如下:
 
 ```
-(base) yanglei@yuanhong composingHandlerAndAddStart % tree ./
+(base) root@yuanhong composingHandlerAndAddStart % tree ./
 ./
 ├── createHttpServerInStart.go
 ├── httpServer.go
@@ -335,7 +335,7 @@ func (s *HTTPServerWithOriginHttpServer) Start(addr string) error {
 - 工程结构如下:
 
 ```
-(base) yanglei@yuanhong serveHTTP % tree ./
+(base) root@yuanhong serveHTTP % tree ./
 ./
 ├── handleFunc.go	// 定义业务逻辑函数类型
 ├── httpServer.go	// 定义HTTP服务器
@@ -426,7 +426,7 @@ func (s *HTTPServer) AddRoute(method string, path string, handleFunc HandleFunc)
 - 工程结构如下:
 
 ```go
-(base) yanglei@yuanhong serveHTTP % tree ./
+(base) root@yuanhong serveHTTP % tree ./
 ./
 ├── context.go	// 定义HandleFunc的上下文
 ├── handleFunc.go
@@ -478,7 +478,7 @@ func (group *RouterGroup) Handle(httpMethod, relativePath string, handlers ...Ha
 - 工程结构如下:
 
 ```
-(base) yanglei@yuanhong addRoutes % tree ./
+(base) root@yuanhong addRoutes % tree ./
 ./
 ├── context.go
 ├── handleFunc.go
@@ -567,7 +567,7 @@ func (s *HTTPServer) AddRoutes(method string, path string, handles ...HandleFunc
 - 工程结构如下:
 
 ```
-(base) yanglei@yuanhong addRoutes % tree ./
+(base) root@yuanhong addRoutes % tree ./
 ./
 ├── context.go
 ├── handleFunc.go
@@ -611,7 +611,7 @@ func TestServer(t *testing.T) {
 - 工程结构如下:
 
 ```
-(base) yanglei@yuanhong serveHTTP % tree ./
+(base) root@yuanhong serveHTTP % tree ./
 ./
 ├── context.go
 ├── handleFunc.go
@@ -687,7 +687,7 @@ func (e *Echo) GET(path string, h HandlerFunc, m ...MiddlewareFunc) *Route {
 - 工程结构如下:
 
 ```
-(base) yanglei@yuanhong serveHTTP % tree ./     
+(base) root@yuanhong serveHTTP % tree ./     
 ./
 ├── context.go
 ├── handleFunc.go
@@ -808,7 +808,7 @@ func TestServer(t *testing.T) {
 - 工程结构如下:
 
 ```
-(base) yanglei@yuanhong serveHTTP % tree ./
+(base) root@yuanhong serveHTTP % tree ./
 ./
 ├── context.go
 ├── handleFunc.go
