--- a/note/ 第1周-Web框架之 Server与路由树 /3. Web框架概览-GIN框架分析.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /3. Web框架概览-GIN框架分析.md
@@ -64,7 +64,7 @@ g.POST("/user", func(ctx *gin.Context) {
 
 [IRoutes](https://github.com/gin-gonic/gin/blob/master/routergroup.go#L33)接口是GIN的核心接口,提供了注册路由的抽象.提及到这些功能,那么GIN的IRoutes接口就很像Beego的[ControllerRegister](https://github.com/beego/beego/blob/develop/server/web/router.go#L160)接口了.
 
-实际上GIN的[`Engine`](https://github.com/gin-gonic/gin/blob/master/gin.go#L84)结构体就是该接口的实现.
+实际上GIN的[`Engine`](https://github.com/gin-gonic/gin/blob/master/gin.go#L84)结构体就是组合了该接口的实现.
 
 ```GO
 // IRoutes defines all router handle interface.
