12. 路由树-静态匹配之集成Server 完成

--- a/note/ 第1周-Web框架之 Server与路由树 /11. 路由树-静态匹配之路由查找.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /11. 路由树-静态匹配之路由查找.md
@@ -1,5 +1,22 @@
 # 11. 路由树-静态匹配之路由查找
 
+本节课工程结构如下:
+
+```
+(base) yanglei@yuanhong 10-findRoute % tree ./
+./
+├── context.go
+├── handleFunc.go
+├── httpServer.go
+├── httpServer_test.go
+├── node.go
+├── router.go
+├── router_test.go
+└── serverInterface.go
+
+0 directories, 8 files
+```
+
 ## PART1. 定义查找路由的方法
 
 所谓查找路由,就是根据给定的HTTP动词和uri,在路由树中查找对应的节点.
