13. 路由树-通配符匹配之路由注册 完成
1. 静态匹配完成 发布v2版本
2. 路由树-通配符匹配的路由注册功能实现

--- a/note/ 第1周-Web框架之 Server与路由树 /12. 路由树-静态匹配之集成Server.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /12. 路由树-静态匹配之集成Server.md
@@ -1,5 +1,22 @@
 # 12. 路由树-静态匹配之集成Server
 
+本节课工程结构如下:
+
+```
+(base) yanglei@yuanhong 11-embeddingRouterIntoServer % tree ./
+./
+├── context.go
+├── handleFunc.go
+├── httpServer.go
+├── httpServer_test.go
+├── node.go
+├── router.go
+├── router_test.go
+└── serverInterface.go
+
+0 directories, 8 files
+```
+
 ## PART1. 实现`HTTPServer.serve()`方法
 
 之前的课程中说过,该方法的职责为:**查找路由树并执行命中的业务逻辑**.我们也已经实现了`router.findRoute()`.
@@ -117,6 +134,7 @@ func newRouter() router {
 
 - `router_test.go`中也有修改
 
+至此,静态路由匹配功能完成.将此版本作为v2.
 
 ## 附录
 
