15. 参数路径之基本注册和查找 完成
1. 参数路径之基本注册和查找 完成
2. v3版本支持通配符路由匹配

--- a/note/ 第1周-Web框架之 Server与路由树 /14. 路由树-通配符匹配之路由查找与测试.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /14. 路由树-通配符匹配之路由查找与测试.md
@@ -3,7 +3,7 @@
 本节课工程结构如下:
 
 ```
-(base) yanglei@yuanhong 12-matchWildcard % tree ./
+(base) yanglei@yuanhong 13-findWildcard % tree ./
 ./
 ├── context.go
 ├── handleFunc.go
