18. 路由树-总结与面试要点 完成
1. 18. 路由树-总结与面试要点 完成
2. v4版本:支持参数路径匹配

--- a/note/ 第1周-Web框架之 Server与路由树 /17. 路由树-参数路径之参数值.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /17. 路由树-参数路径之参数值.md
@@ -1,5 +1,23 @@
 # 17. 路由树-参数路径之参数值
 
+本节课工程结构如下:
+
+```
+(base) yanglei@yuanhong 16-valueOfParamRoute % tree ./
+./
+├── context.go
+├── handleFunc.go
+├── httpServer.go
+├── httpServer_test.go
+├── matchNode.go
+├── node.go
+├── router.go
+├── router_test.go
+└── serverInterface.go
+
+0 directories, 9 files
+```
+
 ## PART1. 获取参数值
 
 之前已经实现了参数路径的注册与查找,但仍有一个核心问题没有解决:**我们没有办法将参数从路由中带到逻辑处理函数中**.
