修改笔记的目录结构

--- a/note/ 第1周-Web框架之 Server与路由树 /PART1. Web框架概览/2. Web框架概览-Beego框架分析.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART1. Web框架概览/2. Web框架概览-Beego框架分析.md
@@ -139,7 +139,7 @@ Beego对Context进行了一个细分,分为`Input`和`Output`.`Request`字段是
 
 ## PART5. 核心抽象总结
 
-![Beego核心抽象](./img/2.Web框架概览-Beego框架分析/Beego核心抽象.png)
+![Beego核心抽象](../img/2.Web框架概览-Beego框架分析/Beego核心抽象.png)
 
 - `ControllerRegister`:最为基础,它解决了**路由注册**和**路由匹配**这个基础问题
 - `Context`和`Controller`:为用户提供了丰富API,用于辅助构建系统
