--- a/note/ 第1周-Web框架之 Server与路由树 /PART1. Web框架概览/4. Web框架概览-Iris框架分析.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART1. Web框架概览/4. Web框架概览-Iris框架分析.md
@@ -181,7 +181,7 @@ Context也是表示一个请求的**上下文**.它本身也提供了**各种处
 
 ## PART5. 抽象总结
 
-![核心抽象总结](./img/4.Web框架概览-Iris框架分析/核心抽象总结.png)
+![核心抽象总结](../img/4.Web框架概览-Iris框架分析/核心抽象总结.png)
 
 - Route & Party & APIBuilder:解决路由相关(路由注册/路由匹配等)的问题
 - Application:解决HTTPServer的问题
