--- a/note/ 第1周-Web框架之 Server与路由树 /PART1. Web框架概览/5. Web框架概览-Echo框架分析.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART1. Web框架概览/5. Web框架概览-Echo框架分析.md
@@ -182,7 +182,7 @@ Echo中的[Context](https://github.com/labstack/echo/blob/master/context.go#L19)
 
 ## PART5. 核心抽象
 
-![核心抽象总结](./img/5.Web框架概览-Echo框架分析/核心抽象总结.png)
+![核心抽象总结](../img/5.Web框架概览-Echo框架分析/核心抽象总结.png)
 
 - Route & node:处理路由相关功能
 - Echo:类似Beego中的Beego的HttpServer和GIN中的Engine
