--- a/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/12. 路由树-静态匹配之集成Server.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/12. 路由树-静态匹配之集成Server.md
@@ -104,7 +104,7 @@ func TestServer_serve(t *testing.T) {
 
 其实这里还有一个问题:如果将`s := NewHTTPServer()`更改为`s := &HTTPServer{}`,就会因为`router`为空而触发panic.
 
-![IDE调试功能](./img/12.路由树-静态匹配之集成Server/IDE调试功能.png)
+![IDE调试功能](../img/12.路由树-静态匹配之集成Server/IDE调试功能.png)
 
 ## PART4. 修改`HTTPServer`的成员属性
 
