--- a/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/8. 路由树-全静态匹配.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/8. 路由树-全静态匹配.md
@@ -88,7 +88,7 @@ type node struct {
 
 这里需要画图演示一下:
 
-![node节点图示](./img/8.路由树-全静态匹配/node节点图示.jpg)
+![node节点图示](../img/8.路由树-全静态匹配/node节点图示.jpg)
 
 看到这样的代码组织,可以想象到大部分的操作还是会落在`node`结构体上.因此在`node`和`routers`之间定义一层`tree`,意义并不大.
 
