--- a/note/ 第1周-Web框架之 Server与路由树 /PART1. Web框架概览/3. Web框架概览-GIN框架分析.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART1. Web框架概览/3. Web框架概览-GIN框架分析.md
@@ -335,13 +335,13 @@ type Context struct {
 - 处理响应的API:例如返回JSON或者XML响应的方法
 - 渲染页面的API:如HTML方法
 
-![责任链模式](./img/3.Web框架概览-GIN框架分析/Context抽象.png)
+![责任链模式](../img/3.Web框架概览-GIN框架分析/Context抽象.png)
 
 **这个结构体的API要多看!**
 
 ## PART5. 核心抽象总结
 
-![核心抽象总结](./img/3.Web框架概览-GIN框架分析/核心抽象总结.png)
+![核心抽象总结](../img/3.Web框架概览-GIN框架分析/核心抽象总结.png)
 
 - `methodTree`&`node`:表示了一棵路由树
 - `Engine`:Beego中HttpServer和ControllerRegister的结合体,完成了路由匹配和服务启动的功能
