--- a/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/11. 路由树-静态匹配之路由查找.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/11. 路由树-静态匹配之路由查找.md
@@ -607,15 +607,15 @@ func TestRouter_findRoute(t *testing.T) {
 }
 ```
 
-![没有通过的单测](./img/11.路由树-静态匹配之路由查找/没有通过的单测.png)
+![没有通过的单测](../img/11.路由树-静态匹配之路由查找/没有通过的单测.png)
 
 #### 3.4.2 修bug
 
-![断点调试](./img/11.路由树-静态匹配之路由查找/断点调试.png)
+![断点调试](../img/11.路由树-静态匹配之路由查找/断点调试.png)
 
-![步进调试](./img/11.路由树-静态匹配之路由查找/步进调试.png)
+![步进调试](../img/11.路由树-静态匹配之路由查找/步进调试.png)
 
-![步进调试-定位问题](./img/11.路由树-静态匹配之路由查找/步进调试-定位问题.png)
+![步进调试-定位问题](../img/11.路由树-静态匹配之路由查找/步进调试-定位问题.png)
 
 可以看到,过滤掉`/`之后,切割`path`的结果不符合预期.
 
