课后复习-Server部分完成

--- a/note/ 第1周-Web框架之 Server与路由树 /PART2. Server/6. Server详解与面试要点.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART2. Server/6. Server详解与面试要点.md
@@ -58,6 +58,8 @@ func TestServer(t *testing.T) {
 
 ### 4.1 我们需要什么?
 
+先来看原生(`net/http`包)的`ListenAndServe()`函数:
+
 ```go
 func ListenAndServe(addr string, handler Handler) error {
 	server := &Server{Addr: addr, Handler: handler}
@@ -65,13 +67,15 @@ func ListenAndServe(addr string, handler Handler) error {
 }
 ```
 
-从`http.ListenAndServe()`方法可以看出,我们需要实现一个Handler类型:
+`Handler`接口的实现:
 
 ```go
 type Handler interface {
 	ServeHTTP(ResponseWriter, *Request)
 }
 ```
+
+从以上两点可以看出,我们需要实现一个Handler接口的实现:
 
 ### 4.2 构建Server Interface的方案:组合`http.Handler`
 
