--- a/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/9. 路由树-TDD起步.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/9. 路由树-TDD起步.md
@@ -348,7 +348,7 @@ func (n *node) equal(y *node) (msg string, ok bool) {
 
 假定我们注册了一个名为`/user/home`的路由,那么我们预期的路由树结构应该如下图示:
 
-![预期路由树结构](./img/9.路由树-TDD起步/预期路由树结构.jpg)
+![预期路由树结构](../img/9.路由树-TDD起步/预期路由树结构.jpg)
 
 ```go
 package tdd
