--- a/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/10. 路由树-静态匹配测试用例.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/10. 路由树-静态匹配测试用例.md
@@ -1200,7 +1200,7 @@ func TestRouter_AddRoute_Illegal_Case(t *testing.T) {
 
 注意:断点调试时,IDE上点(注意是拿鼠标点的不是拿代码打的)好断点之后,右键可以为断点设置条件,当符合条件时断点才生效.
 
-![为断点设置条件](./img/10.路由树-静态匹配测试用例/为断点设置条件.png)
+![为断点设置条件](../img/10.路由树-静态匹配测试用例/为断点设置条件.png)
 
 注意:
 
