--- a/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/10. 路由树-静态匹配测试用例.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/10. 路由树-静态匹配测试用例.md
@@ -1196,7 +1196,7 @@ func TestRouter_AddRoute_Illegal_Case(t *testing.T) {
 
 ### 2.2 不是以`/`为前导字符的路由
 
-从PART1的测试情况来看,似乎一切良好.但其实我们忽略了一个case:**如果路由不是以`/`前导的怎么办?**比如注册的路由为`login`,而不是`/login`的情况
+从PART1的测试情况来看,似乎一切良好.但其实我们忽略了一个case:**如果路由不是以`/`前导的怎么办**?比如注册的路由为`login`,而不是`/login`的情况
 
 注意:断点调试时,IDE上点(注意是拿鼠标点的不是拿代码打的)好断点之后,右键可以为断点设置条件,当符合条件时断点才生效.
 
