--- a/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/11. 路由树-静态匹配之路由查找.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/11. 路由树-静态匹配之路由查找.md
@@ -252,7 +252,7 @@ func TestRouter_findRoute(t *testing.T) {
 
 注:这里把`testCases`的类型改成了匿名结构体,不然没法用IDE的单个测试功能.单个测试功能如下图示:
 
-![单个测试功能](./img/11.路由树-静态匹配之路由查找/单个测试功能.png)
+![单个测试功能](../img/11.路由树-静态匹配之路由查找/单个测试功能.png)
 
 ### 3.2 完全命中的情况
 
