Route复习-静态路由查找部分完成

--- a/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
@@ -2145,7 +2145,12 @@ type TestCaseNode struct {
 ```go
 func TestRouter_FindRoute(t *testing.T) {
 	// step1. 构造路由树
-	testRoutes := []TestNode{}
+	testRoutes := []TestNode{
+		{
+			method: http.MethodGet,
+			path:   "/user",
+		},
+	}
 	r := newRouter()
 	mockHandle := func(ctx *Context) {}
 
@@ -2169,21 +2174,681 @@ func TestRouter_FindRoute(t *testing.T) {
 
 	// step3. 测试是否找到节点
 	for _, testCase := range testCases {
-		foundNode, found := r.findRoute(testCase.method, testCase.path)
-		assert.Equal(t, testCase.isFound, found)
-		// 3.1 判断在路由树中是否找到了节点
-		if !found {
-			return
-		}
+		t.Run(testCase.name, func(t *testing.T) {
+			foundNode, found := r.findRoute(testCase.method, testCase.path)
+			assert.Equal(t, testCase.isFound, found)
+			// 3.1 判断在路由树中是否找到了节点
+			if !found {
+				return
+			}
 
-		// 3.2 判断找到的节点和预期的节点是否相同
-		msg, equal := testCase.wantNode.equal(foundNode)
-		assert.True(t, equal, msg)
+			// 3.2 判断找到的节点和预期的节点是否相同
+			msg, equal := testCase.wantNode.equal(foundNode)
+			assert.True(t, equal, msg)
+		})
 	}
 }
 ```
 
 ### 4.4 构造测试用例
+
+- HTTP动词对应的路由树不存在
+- 完全命中
+- 命中了path对应的节点,但HandleFunc为nil
+- 根节点(特殊处理)
+- path对应的节点不存在
+
+### 4.5 根据测试用例开发findRoute()
+
+#### 4.5.1 HTTP动词对应的路由树不存在
+
+##### a. 实现
+
+`route.go`:
+
+```go
+// findRoute 根据给定的HTTP动词和path 在路由树中查找匹配的节点
+func (r *router) findRoute(method string, path string) (*node, bool) {
+	_, ok := r.trees[method]
+	if !ok {
+		return nil, false
+	}
+	panic("implement me")
+}
+```
+
+##### b. 测试
+
+`route_test.go`:
+
+```go
+func TestRouter_FindRoute(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		{
+			method: http.MethodGet,
+			path:   "/user",
+		},
+	}
+	r := newRouter()
+	mockHandle := func(ctx *Context) {}
+
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandle)
+	}
+
+	// step2. 构造测试用例
+	testCases := []struct {
+		// name 子测试用例的名称
+		name string
+		// method HTTP动词
+		method string
+		// path 路由路径
+		path string
+		// isFound 是否找到了节点
+		isFound bool
+		// wantNode 期望的路由节点
+		wantNode *node
+	}{
+		{
+			name:     "Method not found",
+			method:   http.MethodDelete,
+			path:     "/user",
+			isFound:  false,
+			wantNode: nil,
+		},
+	}
+
+	// step3. 测试是否找到节点
+	for _, testCase := range testCases {
+		t.Run(testCase.name, func(t *testing.T) {
+			foundNode, found := r.findRoute(testCase.method, testCase.path)
+			assert.Equal(t, testCase.isFound, found)
+			// 3.1 判断在路由树中是否找到了节点
+			if !found {
+				return
+			}
+
+			// 3.2 判断找到的节点和预期的节点是否相同
+			msg, equal := testCase.wantNode.equal(foundNode)
+			assert.True(t, equal, msg)
+		})
+	}
+}
+```
+
+#### 4.5.2 完全命中
+
+##### a. 实现
+
+- step1. 按`/`切割path
+- step2. 从路由树的根节点开始,按"层次"查找节点
+- step3. 没找到则返回`nil, false`即可
+
+这里我一开始的实现是这样的:
+
+`route.go`:
+
+```go
+// findRoute 根据给定的HTTP动词和path 在路由树中查找匹配的节点
+func (r *router) findRoute(method string, path string) (*node, bool) {
+	// HTTP动词对应的路由树不存在 直接返回nil false即可
+	root, ok := r.trees[method]
+	if !ok {
+		return nil, false
+	}
+
+	//
+	path = strings.TrimLeft(path, "/")
+	pathSegments := strings.Split(path, "/")
+	target := root
+	for _, pathSegment := range pathSegments {
+		target, ok = target.children[pathSegment]
+		if !ok {
+			return nil, false
+		}
+	}
+	return target, true
+}
+```
+
+有2个问题:
+
+1. 没有对`target.children`判空
+2. "在当前节点下查找子节点"是一个独立完整的功能,应该是`node`结构体的方法
+
+修改后的实现:
+
+`node.go`:
+
+```go
+// childOf 本方法用于根据给定的path值 在当前节点的子节点映射中查找path为给定path值的节点
+// 找到则返回节点 否则返回 nil, false
+func (n *node) childOf(path string) (*node, bool) {
+	if n.children == nil {
+		return nil, false
+	}
+
+	child, found := n.children[path]
+	if !found {
+		return nil, false
+	}
+
+	return child, true
+}
+```
+
+`route.go`:
+
+```go
+// findRoute 根据给定的HTTP动词和path 在路由树中查找匹配的节点
+func (r *router) findRoute(method string, path string) (*node, bool) {
+	// HTTP动词对应的路由树不存在 直接返回nil false即可
+	root, ok := r.trees[method]
+	if !ok {
+		return nil, false
+	}
+
+	// 在路由树中逐层查找节点
+	path = strings.TrimLeft(path, "/")
+	pathSegments := strings.Split(path, "/")
+	target := root
+	for _, pathSegment := range pathSegments {
+		target, ok = target.children[pathSegment]
+		if !ok {
+			return nil, false
+		}
+	}
+	return target, true
+}
+```
+
+##### b. 测试
+
+`route_test.go`:
+
+```go
+func TestRouter_FindRoute(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		{
+			method: http.MethodGet,
+			path:   "/user",
+		},
+		{
+			method: http.MethodGet,
+			path:   "/order/detail",
+		},
+	}
+	r := newRouter()
+	mockHandle := func(ctx *Context) {}
+
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandle)
+	}
+
+	// step2. 构造测试用例
+	testCases := []struct {
+		// name 子测试用例的名称
+		name string
+		// method HTTP动词
+		method string
+		// path 路由路径
+		path string
+		// isFound 是否找到了节点
+		isFound bool
+		// wantNode 期望的路由节点
+		wantNode *node
+	}{
+		{
+			name:     "Method not found",
+			method:   http.MethodDelete,
+			path:     "/user",
+			isFound:  false,
+			wantNode: nil,
+		},
+		{
+			name:    "completely match",
+			method:  http.MethodGet,
+			path:    "/order/detail",
+			isFound: true,
+			wantNode: &node{
+				path:       "detail",
+				children:   nil,
+				HandleFunc: mockHandle,
+			},
+		},
+	}
+
+	// step3. 测试是否找到节点
+	for _, testCase := range testCases {
+		t.Run(testCase.name, func(t *testing.T) {
+			foundNode, found := r.findRoute(testCase.method, testCase.path)
+			assert.Equal(t, testCase.isFound, found)
+			// 3.1 判断在路由树中是否找到了节点
+			if !found {
+				return
+			}
+
+			// 3.2 判断找到的节点和预期的节点是否相同
+			msg, equal := testCase.wantNode.equal(foundNode)
+			assert.True(t, equal, msg)
+		})
+	}
+}
+```
+
+#### 4.5.3 命中了path对应的节点,但HandleFunc为nil
+
+这个case不需要做特殊的边缘条件检测.因为在`addRoute()`时我们也没有检测HandleFunc是否为空.换言之就是:既然在注册路由时允许使用者传入空的HandleFunc,那么在查找时命中了一个HandleFunc为nil的节点就不算是错误
+
+##### a. 测试
+
+`route_test.go`:
+
+```go
+func TestRouter_FindRoute(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		{
+			method: http.MethodGet,
+			path:   "/user",
+		},
+		{
+			method: http.MethodGet,
+			path:   "/order/detail",
+		},
+	}
+	r := newRouter()
+	mockHandle := func(ctx *Context) {}
+
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandle)
+	}
+
+	// step2. 构造测试用例
+	testCases := []struct {
+		// name 子测试用例的名称
+		name string
+		// method HTTP动词
+		method string
+		// path 路由路径
+		path string
+		// isFound 是否找到了节点
+		isFound bool
+		// wantNode 期望的路由节点
+		wantNode *node
+	}{
+		{
+			name:     "Method not found",
+			method:   http.MethodDelete,
+			path:     "/user",
+			isFound:  false,
+			wantNode: nil,
+		},
+		{
+			name:    "completely match",
+			method:  http.MethodGet,
+			path:    "/order/detail",
+			isFound: true,
+			wantNode: &node{
+				path:       "detail",
+				children:   nil,
+				HandleFunc: mockHandle,
+			},
+		},
+		{
+			name:    "nil handle func",
+			method:  http.MethodGet,
+			path:    "/order",
+			isFound: true,
+			wantNode: &node{
+				path: "order",
+				children: map[string]*node{
+					"detail": &node{
+						path:       "detail",
+						children:   nil,
+						HandleFunc: mockHandle,
+					},
+				},
+				HandleFunc: nil,
+			},
+		},
+	}
+
+	// step3. 测试是否找到节点
+	for _, testCase := range testCases {
+		t.Run(testCase.name, func(t *testing.T) {
+			foundNode, found := r.findRoute(testCase.method, testCase.path)
+			assert.Equal(t, testCase.isFound, found)
+			// 3.1 判断在路由树中是否找到了节点
+			if !found {
+				return
+			}
+
+			// 3.2 判断找到的节点和预期的节点是否相同
+			msg, equal := testCase.wantNode.equal(foundNode)
+			assert.True(t, equal, msg)
+		})
+	}
+}
+```
+
+#### 4.5.4 根节点
+
+##### a. 实现
+
+`route.go`:
+
+```go
+// findRoute 根据给定的HTTP动词和path 在路由树中查找匹配的节点
+func (r *router) findRoute(method string, path string) (*node, bool) {
+	// HTTP动词对应的路由树不存在 直接返回nil false即可
+	root, ok := r.trees[method]
+	if !ok {
+		return nil, false
+	}
+
+	target := root
+	// 对根节点做特殊处理
+	if path == "/" {
+		return target, true
+	}
+
+	// 在路由树中逐层查找节点
+	path = strings.TrimLeft(path, "/")
+	pathSegments := strings.Split(path, "/")
+	for _, pathSegment := range pathSegments {
+		target, ok = target.children[pathSegment]
+		if !ok {
+			return nil, false
+		}
+	}
+	return target, true
+}
+```
+
+##### b. 测试
+
+`route_test.go`:
+
+```go
+func TestRouter_FindRoute(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		{
+			method: http.MethodGet,
+			path:   "/user",
+		},
+		{
+			method: http.MethodGet,
+			path:   "/order/detail",
+		},
+		{
+			method: http.MethodGet,
+			path:   "/",
+		},
+	}
+	r := newRouter()
+	mockHandle := func(ctx *Context) {}
+
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandle)
+	}
+
+	// step2. 构造测试用例
+	testCases := []struct {
+		// name 子测试用例的名称
+		name string
+		// method HTTP动词
+		method string
+		// path 路由路径
+		path string
+		// isFound 是否找到了节点
+		isFound bool
+		// wantNode 期望的路由节点
+		wantNode *node
+	}{
+		{
+			name:     "Method not found",
+			method:   http.MethodDelete,
+			path:     "/user",
+			isFound:  false,
+			wantNode: nil,
+		},
+		{
+			name:    "completely match",
+			method:  http.MethodGet,
+			path:    "/order/detail",
+			isFound: true,
+			wantNode: &node{
+				path:       "detail",
+				children:   nil,
+				HandleFunc: mockHandle,
+			},
+		},
+		{
+			name:    "nil handle func",
+			method:  http.MethodGet,
+			path:    "/order",
+			isFound: true,
+			wantNode: &node{
+				path: "order",
+				children: map[string]*node{
+					"detail": &node{
+						path:       "detail",
+						children:   nil,
+						HandleFunc: mockHandle,
+					},
+				},
+				HandleFunc: nil,
+			},
+		},
+		{
+			name:    "root node",
+			method:  http.MethodGet,
+			path:    "/",
+			isFound: true,
+			wantNode: &node{
+				path: "/",
+				children: map[string]*node{
+					"user": &node{
+						path:       "user",
+						children:   nil,
+						HandleFunc: mockHandle,
+					},
+					"order": &node{
+						path: "order",
+						children: map[string]*node{
+							"detail": &node{
+								path:       "detail",
+								children:   nil,
+								HandleFunc: mockHandle,
+							},
+						},
+						HandleFunc: nil,
+					},
+				},
+				HandleFunc: mockHandle,
+			},
+		},
+	}
+
+	// step3. 测试是否找到节点
+	for _, testCase := range testCases {
+		t.Run(testCase.name, func(t *testing.T) {
+			foundNode, found := r.findRoute(testCase.method, testCase.path)
+			assert.Equal(t, testCase.isFound, found)
+			// 3.1 判断在路由树中是否找到了节点
+			if !found {
+				return
+			}
+
+			// 3.2 判断找到的节点和预期的节点是否相同
+			msg, equal := testCase.wantNode.equal(foundNode)
+			assert.True(t, equal, msg)
+		})
+	}
+}
+```
+
+#### 4.5.5 path对应的节点不存在
+
+##### a. 测试
+
+`route_test.go`:
+
+```go
+func TestRouter_FindRoute(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		{
+			method: http.MethodGet,
+			path:   "/user",
+		},
+		{
+			method: http.MethodGet,
+			path:   "/order/detail",
+		},
+		{
+			method: http.MethodGet,
+			path:   "/",
+		},
+	}
+	r := newRouter()
+	mockHandle := func(ctx *Context) {}
+
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandle)
+	}
+
+	// step2. 构造测试用例
+	testCases := []struct {
+		// name 子测试用例的名称
+		name string
+		// method HTTP动词
+		method string
+		// path 路由路径
+		path string
+		// isFound 是否找到了节点
+		isFound bool
+		// wantNode 期望的路由节点
+		wantNode *node
+	}{
+		{
+			name:     "Method not found",
+			method:   http.MethodDelete,
+			path:     "/user",
+			isFound:  false,
+			wantNode: nil,
+		},
+		{
+			name:    "completely match",
+			method:  http.MethodGet,
+			path:    "/order/detail",
+			isFound: true,
+			wantNode: &node{
+				path:       "detail",
+				children:   nil,
+				HandleFunc: mockHandle,
+			},
+		},
+		{
+			name:    "nil handle func",
+			method:  http.MethodGet,
+			path:    "/order",
+			isFound: true,
+			wantNode: &node{
+				path: "order",
+				children: map[string]*node{
+					"detail": &node{
+						path:       "detail",
+						children:   nil,
+						HandleFunc: mockHandle,
+					},
+				},
+				HandleFunc: nil,
+			},
+		},
+		{
+			name:    "root node",
+			method:  http.MethodGet,
+			path:    "/",
+			isFound: true,
+			wantNode: &node{
+				path: "/",
+				children: map[string]*node{
+					"user": &node{
+						path:       "user",
+						children:   nil,
+						HandleFunc: mockHandle,
+					},
+					"order": &node{
+						path: "order",
+						children: map[string]*node{
+							"detail": &node{
+								path:       "detail",
+								children:   nil,
+								HandleFunc: mockHandle,
+							},
+						},
+						HandleFunc: nil,
+					},
+				},
+				HandleFunc: mockHandle,
+			},
+		},
+		{
+			name:     "path not found",
+			method:   http.MethodGet,
+			path:     "/login",
+			isFound:  false,
+			wantNode: nil,
+		},
+	}
+
+	// step3. 测试是否找到节点
+	for _, testCase := range testCases {
+		t.Run(testCase.name, func(t *testing.T) {
+			foundNode, found := r.findRoute(testCase.method, testCase.path)
+			assert.Equal(t, testCase.isFound, found)
+			// 3.1 判断在路由树中是否找到了节点
+			if !found {
+				return
+			}
+
+			// 3.2 判断找到的节点和预期的节点是否相同
+			msg, equal := testCase.wantNode.equal(foundNode)
+			assert.True(t, equal, msg)
+		})
+	}
+}
+```
+
+## PART5. route集成至Server
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
