--- a/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
@@ -2827,6 +2827,33 @@ func TestRouter_FindRoute(t *testing.T) {
 
 ## PART5. route集成至Server
 
+`server.go`:
+
+```go
+// ServeHTTP 是http.Handler接口的方法 此处必须先写个实现 不然Server不是http.Handler接口的实现
+func (s *HTTPServer) ServeHTTP(w http.ResponseWriter, r *http.Request) {
+	ctx := &Context{
+		Req:  r,
+		Resp: w,
+	}
+
+	s.serve(ctx)
+}
+
+// serve 查找路由树并执行匹配到的节点所对应的处理函数
+func (s *HTTPServer) serve(ctx *Context) {
+	method := ctx.Req.Method
+	path := ctx.Req.URL.Path
+	targetNode, found := s.router.findRoute(method, path)
+	if !found || targetNode.HandleFunc == nil {
+		ctx.Resp.WriteHeader(http.StatusNotFound)
+		_, _ = ctx.Resp.Write([]byte("not found"))
+		return
+	}
+	targetNode.HandleFunc(ctx)
+}
+```
+
 
 
 
