更新一些表达错误的笔记内容

--- a/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/13. 路由树-通配符匹配之路由注册.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/13. 路由树-通配符匹配之路由注册.md
@@ -160,9 +160,9 @@ FAIL
 
 注:这里还是看他TDD的思路,是用测试用例告诉自己"哪里不符合预期".
 
-很明显,在查找子节点的操作中出问题了.不应该把`*`放在子节点集合里,而是应该放在`wildcardChild`字段上.
+很明显,在创建子节点的操作中出问题了.创建时不应该把`*`放在子节点集合里,而是应该放在`wildcardChild`字段上.
 
-### 3.3 修改查找子节点的逻辑
+### 3.3 修改创建子节点的逻辑
 
 `node.go`:
 
