--- a/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
@@ -2827,6 +2827,8 @@ func TestRouter_FindRoute(t *testing.T) {
 
 ## PART5. route集成至Server
 
+### 5.1 实现
+
 `server.go`:
 
 ```go
@@ -2854,7 +2856,31 @@ func (s *HTTPServer) serve(ctx *Context) {
 }
 ```
 
+### 5.2 测试
 
+`server_test.go`:
+
+```go
+package v4_rc
+
+import (
+	"net/http"
+	"testing"
+)
+
+// TestServer_Start 测试服务器启动
+func TestServer_Start(t *testing.T) {
+	s := NewHTTPServer()
+	handleFunc := func(ctx *Context) {
+		ctx.Resp.Write([]byte("hello order detail"))
+	}
+	s.addRoute(http.MethodGet, "/order/detail", handleFunc)
+	err := s.Start(":8081")
+	if err != nil {
+		t.Fatal(err)
+	}
+}
+```
 
 
 
