--- a/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/13. 路由树-通配符匹配之路由注册.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART3. 路由树/13. 路由树-通配符匹配之路由注册.md
@@ -21,13 +21,13 @@
 
 ![学习路线](../img/13.路由树-通配符匹配之路由注册/学习路线.png)
 
-## PART2. 通配符匹配的定义与设计
+## PART2. 通配符路由的定义与设计
 
-### 2.1 通配符匹配的定义
+### 2.1 通配符路由的定义
 
 通配符匹配:是指用`*`表达匹配任何路径
 
-### 2.2 通配符匹配的设计
+### 2.2 通配符路由的设计
 
 这里就要考虑定义中所说的**任何路径**.
 
