Route复习-通配符路由的注册与查找 完成

--- a/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
@@ -2882,23 +2882,702 @@ func TestServer_Start(t *testing.T) {
 }
 ```
 
+## PART6. 通配符路由的注册与查找
 
+### 6.1 通配符路由的定义与设计
 
+#### 6.1.1 通配符路由的定义
 
+通配符路由:用`*`表达匹配任何路径
 
+#### 6.1.2 通配符路由的设计
 
+1. 一个`*`只能表达1段路由
+2. 不做可回溯的路由匹配机制
 
+### 6.2 通配符路由的注册
 
+#### 6.2.1 修改`node`的结构
 
+`node.go`:
 
+```go
+// node 路由树中的节点
+type node struct {
+	// path 路由路径
+	path string
+	// children 子节点 key为子节点的路由路径 value为路径对应子节点
+	children map[string]*node
+	// wildcardChild 通配符子节点
+	wildcardChild *node
+	// HandleFunc 路由对应的处理函数
+	HandleFunc
+}
+```
 
+#### 6.2.2 定义测试用例
 
+`route_test.go`:
 
+```go
+func TestRouter_wildcard(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		// 普通节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/order/*",
+		},
+	}
 
+	r := newRouter()
+	mockHandleFunc := func(ctx *Context) {}
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandleFunc)
+	}
 
+	// step2. 断言路由树
+	wantRouter := &router{trees: map[string]*node{
+		"/": &node{
+			path: "/",
+			children: map[string]*node{
+				"order": &node{
+					path:     "order",
+					children: nil,
+					wildcardChild: &node{
+						path:          "*",
+						children:      nil,
+						wildcardChild: nil,
+						HandleFunc:    mockHandleFunc,
+					},
+					HandleFunc: nil,
+				},
+			},
+			wildcardChild: nil,
+			HandleFunc:    nil,
+		},
+	}}
 
+	msg, ok := wantRouter.equal(r)
+	assert.True(t, ok, msg)
+}
+```
 
+根据debug的结果可知:应该把`*`创建在`wildcardChild`字段上,现在则是创建在了`children`字段上
 
+#### 6.2.3 修改创建子节点的逻辑
+
+正确的逻辑是:当路径为`*`时,将节点创建在`wildcardChild`字段上
+
+`node.go`:
+
+```go
+// findOrCreate 本方法用于根据给定的path值 在当前节点的子节点中查找path为给定path值的节点
+// 找到则返回 未找到则创建
+func (n *node) findOrCreate(segment string) *node {
+	// 若路径为* 则查找或创建通配符子节点
+	if segment == "*" {
+		if n.wildcardChild == nil {
+			n.wildcardChild = &node{
+				path: "*",
+			}
+		}
+		return n.wildcardChild
+	}
+
+	if n.children == nil {
+		n.children = make(map[string]*node)
+	}
+
+	target, exist := n.children[segment]
+	if !exist {
+		// 当前节点的子节点映射中不存在目标子节点 则创建目标子节点 将子节点加入当前节点的子节点映射后返回
+		target = &node{
+			path: segment,
+		}
+		n.children[segment] = target
+		return target
+	}
+
+	// 当前节点的子节点映射中存在目标子节点 则直接返回
+	return target
+}
+```
+
+#### 6.2.4 修改判断子节点相等的逻辑
+
+由于新增了通配符子节点字段,所以对于2个节点,也要比对各自的通配符子节点是否相同
+
+`route_test.go`:
+
+```go
+func (n *node) equal(target *node) (msg string, ok bool) {
+	// step1. 目标节点为空 则必然不等
+	if target == nil {
+		msg = "目标节点为nil"
+		return msg, false
+	}
+
+	// step2. 比较节点的路径是否相同
+	if n.path != target.path {
+		msg = fmt.Sprintf("节点的路径不等, 期望节点的路径为: %s, 目标节点的路径为: %s", n.path, target.path)
+		return msg, false
+	}
+
+	// step3. 比较2个节点的子节点数量是否相同
+	if len(n.children) != len(target.children) {
+		msg = fmt.Sprintf("节点的子节点数量不等, 期望节点的子节点数量为: %d, 目标节点的子节点数量为: %d", len(n.children), len(target.children))
+		return msg, false
+	}
+
+	// step4. 比较2个节点的通配符子节点是否相同
+	if n.wildcardChild != nil {
+		if target.wildcardChild == nil {
+			msg = fmt.Sprintf("目标节点的通配符子节点为空")
+			return msg, false
+		}
+		_, equal := n.wildcardChild.equal(target.wildcardChild)
+		if !equal {
+			msg = fmt.Sprintf("期望节点 %s 的通配符子节点与目标节点 %s 的通配符子节点不等", n.path, target.path)
+			return msg, false
+		}
+	}
+
+	// step5. 比较2个节点的处理函数是否相同
+	wantHandler := reflect.ValueOf(n.HandleFunc)
+	targetHandler := reflect.ValueOf(target.HandleFunc)
+	if wantHandler != targetHandler {
+		msg = fmt.Sprintf("节点的处理函数不等, 期望节点 %s 的处理函数为: %v, 目标节点 %s 的处理函数为: %v", n.path, wantHandler, target.path, targetHandler)
+		return msg, false
+	}
+
+	// step6. 比较2个节点的子节点是否相同
+	for path, child := range n.children {
+		// step6.1 比对2个节点的子节点的路径是否相同
+		dstChild, exist := target.children[path]
+		if !exist {
+			msg = fmt.Sprintf("目标节点中不存在路径为: %s 的子节点", path)
+			return msg, false
+		}
+
+		// step6.2 对路径相同的子节点递归比对
+		msg, equal := child.equal(dstChild)
+		if !equal {
+			return msg, false
+		}
+	}
+
+	return "", true
+}
+```
+
+此时再跑测试用例,就可以跑通了
+
+#### 6.2.5 添加其他测试用例
+
+##### 6.2.5.1 根节点的通配符子节点
+
+`route_test.go`:
+
+```go
+func TestRouter_wildcard(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		// 普通节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/order/*",
+		},
+		// 根节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/*",
+		},
+	}
+
+	r := newRouter()
+	mockHandleFunc := func(ctx *Context) {}
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandleFunc)
+	}
+
+	// step2. 断言路由树
+	wantRouter := &router{
+		trees: map[string]*node{
+			http.MethodGet: &node{
+				path: "/",
+				children: map[string]*node{
+					"order": &node{
+						path:     "order",
+						children: nil,
+						wildcardChild: &node{
+							path:          "*",
+							children:      nil,
+							wildcardChild: nil,
+							HandleFunc:    mockHandleFunc,
+						},
+						HandleFunc: nil,
+					},
+				},
+				wildcardChild: &node{
+					path:          "*",
+					children:      nil,
+					wildcardChild: nil,
+					HandleFunc:    mockHandleFunc,
+				},
+				HandleFunc: nil,
+			},
+		},
+	}
+
+	msg, ok := wantRouter.equal(r)
+	assert.True(t, ok, msg)
+}
+```
+
+##### 6.2.5.2 通配符子节点的通配符子节点
+
+`route_test.go`:
+
+```go
+func TestRouter_wildcard(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		// 普通节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/order/*",
+		},
+		// 根节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/*",
+		},
+		// 通配符子节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/*/*",
+		},
+	}
+
+	r := newRouter()
+	mockHandleFunc := func(ctx *Context) {}
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandleFunc)
+	}
+
+	// step2. 断言路由树
+	wantRouter := &router{
+		trees: map[string]*node{
+			http.MethodGet: &node{
+				path: "/",
+				children: map[string]*node{
+					"order": &node{
+						path:     "order",
+						children: nil,
+						wildcardChild: &node{
+							path:          "*",
+							children:      nil,
+							wildcardChild: nil,
+							HandleFunc:    mockHandleFunc,
+						},
+						HandleFunc: nil,
+					},
+				},
+				wildcardChild: &node{
+					path:     "*",
+					children: nil,
+					wildcardChild: &node{
+						path:          "*",
+						children:      nil,
+						wildcardChild: nil,
+						HandleFunc:    mockHandleFunc,
+					},
+					HandleFunc: mockHandleFunc,
+				},
+				HandleFunc: nil,
+			},
+		},
+	}
+
+	msg, ok := wantRouter.equal(r)
+	assert.True(t, ok, msg)
+}
+```
+
+##### 6.2.5.3 通配符子节点的普通子节点
+
+`route_test.go`:
+
+```go
+func TestRouter_wildcard(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		// 普通节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/order/*",
+		},
+		// 根节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/*",
+		},
+		// 通配符子节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/*/*",
+		},
+		// 通配符子节点的普通子节点
+		{
+			method: http.MethodGet,
+			path:   "/*/get",
+		},
+	}
+
+	r := newRouter()
+	mockHandleFunc := func(ctx *Context) {}
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandleFunc)
+	}
+
+	// step2. 断言路由树
+	wantRouter := &router{
+		trees: map[string]*node{
+			http.MethodGet: &node{
+				path: "/",
+				children: map[string]*node{
+					"order": &node{
+						path:     "order",
+						children: nil,
+						wildcardChild: &node{
+							path:          "*",
+							children:      nil,
+							wildcardChild: nil,
+							HandleFunc:    mockHandleFunc,
+						},
+						HandleFunc: nil,
+					},
+				},
+				wildcardChild: &node{
+					path: "*",
+					children: map[string]*node{
+						"get": &node{
+							path:          "get",
+							children:      nil,
+							wildcardChild: nil,
+							HandleFunc:    mockHandleFunc,
+						},
+					},
+					wildcardChild: &node{
+						path:          "*",
+						children:      nil,
+						wildcardChild: nil,
+						HandleFunc:    mockHandleFunc,
+					},
+					HandleFunc: mockHandleFunc,
+				},
+				HandleFunc: nil,
+			},
+		},
+	}
+
+	msg, ok := wantRouter.equal(r)
+	assert.True(t, ok, msg)
+}
+```
+
+##### 6.2.5.4 通配符子节点的普通子节点的通配符子节点
+
+`route_test.go`:
+
+```go
+func TestRouter_wildcard(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		// 普通节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/order/*",
+		},
+		// 根节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/*",
+		},
+		// 通配符子节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/*/*",
+		},
+		// 通配符子节点的普通子节点
+		{
+			method: http.MethodGet,
+			path:   "/*/get",
+		},
+		// 通配符子节点的普通子节点的通配符子节点
+		{
+			method: http.MethodGet,
+			path:   "/*/order/*",
+		},
+	}
+
+	r := newRouter()
+	mockHandleFunc := func(ctx *Context) {}
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandleFunc)
+	}
+
+	// step2. 断言路由树
+	wantRouter := &router{
+		trees: map[string]*node{
+			http.MethodGet: &node{
+				path: "/",
+				children: map[string]*node{
+					"order": &node{
+						path:     "order",
+						children: nil,
+						wildcardChild: &node{
+							path:          "*",
+							children:      nil,
+							wildcardChild: nil,
+							HandleFunc:    mockHandleFunc,
+						},
+						HandleFunc: nil,
+					},
+				},
+				wildcardChild: &node{
+					path: "*",
+					children: map[string]*node{
+						"get": &node{
+							path:          "get",
+							children:      nil,
+							wildcardChild: nil,
+							HandleFunc:    mockHandleFunc,
+						},
+						"order": &node{
+							path:     "order",
+							children: nil,
+							wildcardChild: &node{
+								path:          "*",
+								children:      nil,
+								wildcardChild: nil,
+								HandleFunc:    mockHandleFunc,
+							},
+							HandleFunc: nil,
+						},
+					},
+					wildcardChild: &node{
+						path:          "*",
+						children:      nil,
+						wildcardChild: nil,
+						HandleFunc:    mockHandleFunc,
+					},
+					HandleFunc: mockHandleFunc,
+				},
+				HandleFunc: nil,
+			},
+		},
+	}
+
+	msg, ok := wantRouter.equal(r)
+	assert.True(t, ok, msg)
+}
+```
+
+### 6.3 通配符路由的匹配
+
+#### 6.3.1 实现
+
+思路比较简单:
+
+- 若当前节点的children映射为空,则有可能匹配到通配符子节点
+- 若在当前节点的children映射中没有找到path对应的子节点,则有可能匹配到通配符子节点
+	- 此处说"有可能匹配到",是因为还有一种可能是通配符子节点为空,这种情况就属于没匹配到了
+
+`node.go`:
+
+```go
+// childOf 本方法用于根据给定的path值 在当前节点的子节点映射中查找path为给定path值的节点
+// 找到则返回节点 否则返回 nil, false
+func (n *node) childOf(path string) (*node, bool) {
+	if n.children == nil {
+		return n.wildcardChild, n.wildcardChild != nil
+	}
+
+	child, found := n.children[path]
+	if !found {
+		return n.wildcardChild, n.wildcardChild != nil
+	}
+
+	return child, true
+}
+```
+
+#### 6.3.2 测试
+
+##### a. 匹配普通节点的通配符子节点
+
+`route_test.go`:
+
+```go
+func TestRouter_FindRoute_Wildcard(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		{
+			method: http.MethodGet,
+			path:   "/order/*",
+		},
+	}
+
+	r := newRouter()
+	mockHandle := func(ctx *Context) {}
+
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandle)
+	}
+
+	// step2. 构造测试用例
+	testCases := []struct {
+		name     string
+		method   string
+		path     string
+		isFound  bool
+		wantNode *node
+	}{
+		{
+			name:    "普通节点的通配符子节点",
+			method:  http.MethodGet,
+			path:    "/order/detail",
+			isFound: true,
+			wantNode: &node{
+				path:          "*",
+				children:      nil,
+				wildcardChild: nil,
+				HandleFunc:    mockHandle,
+			},
+		},
+	}
+
+	for _, testCase := range testCases {
+		t.Run(testCase.name, func(t *testing.T) {
+			targetNode, found := r.findRoute(testCase.method, testCase.path)
+			assert.Equal(t, testCase.isFound, found)
+			if !found {
+				return
+			}
+
+			msg, equal := testCase.wantNode.equal(targetNode)
+			assert.True(t, equal, msg)
+		})
+	}
+}
+```
+
+##### b. 匹配普通节点下普通子节点和通配符子节点共存
+
+```go
+func TestRouter_FindRoute_Wildcard(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		{
+			method: http.MethodGet,
+			path:   "/order/*",
+		},
+		{
+			method: http.MethodGet,
+			path:   "/order/create",
+		},
+	}
+
+	r := newRouter()
+	mockHandle := func(ctx *Context) {}
+
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandle)
+	}
+
+	// step2. 构造测试用例
+	testCases := []struct {
+		name     string
+		method   string
+		path     string
+		isFound  bool
+		wantNode *node
+	}{
+		{
+			name:    "普通节点的通配符子节点",
+			method:  http.MethodGet,
+			path:    "/order/detail",
+			isFound: true,
+			wantNode: &node{
+				path:          "*",
+				children:      nil,
+				wildcardChild: nil,
+				HandleFunc:    mockHandle,
+			},
+		},
+		{
+			name:    "普通节点下通配符子节点和普通子节点共存",
+			method:  http.MethodGet,
+			path:    "/order/create",
+			isFound: true,
+			wantNode: &node{
+				path:          "create",
+				children:      nil,
+				wildcardChild: nil,
+				HandleFunc:    mockHandle,
+			},
+		},
+	}
+
+	for _, testCase := range testCases {
+		t.Run(testCase.name, func(t *testing.T) {
+			targetNode, found := r.findRoute(testCase.method, testCase.path)
+			assert.Equal(t, testCase.isFound, found)
+			if !found {
+				return
+			}
+
+			msg, equal := testCase.wantNode.equal(targetNode)
+			assert.True(t, equal, msg)
+		})
+	}
+}
+```
+
+##### c. server组合route时的通配符匹配
+
+`server_test.go`:
+
+```go
+package v4_rc
+
+import (
+	"net/http"
+	"testing"
+)
+
+// TestServer_Start 测试服务器启动
+func TestServer_Start(t *testing.T) {
+	s := NewHTTPServer()
+
+	wildcardHandleFunc := func(ctx *Context) {
+		ctx.Resp.Write([]byte("hello order wildcard"))
+	}
+	s.addRoute(http.MethodGet, "/order/*", wildcardHandleFunc)
+
+	handleFunc := func(ctx *Context) {
+		ctx.Resp.Write([]byte("hello order detail"))
+	}
+	s.addRoute(http.MethodGet, "/order/detail", handleFunc)
+
+	err := s.Start(":8081")
+	if err != nil {
+		t.Fatal(err)
+	}
+}
+```
 
 
 
