--- a/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
@@ -3579,15 +3579,308 @@ func TestServer_Start(t *testing.T) {
 }
 ```
 
+## PART7. 参数路由的注册与查找
 
+### 7.1 参数路由的定义与设计
 
+#### 7.1.1 参数路由的定义
 
+参数路由:就是指在路由中带上参数,同时这些参数对应的值可以被业务取出来使用.在我们的设计中用`:参数名`的形式表示路由参数
 
+例:`/user/:id`,如果输入路径`/user/123`,则会命中这个路由`/user/:id`,并且在业务函数中可以取到变量`id = 123`
 
+#### 7.1.2 参数路径的设计
 
+**是否允许同样的参数路由和通配符路由一起注册?**
 
+例如同时注册`/user/:id`和`/user/*`一起注册?
 
+可以允许,但没必要,且用户也不该设计这种路由
 
+### 7.2 实现参数路由节点的创建
+
+#### 7.2.1 修改node的结构
+
+`node.go`
+
+```go
+// node 路由树中的节点
+type node struct {
+	path          string           // path 路由路径
+	children      map[string]*node // children 子节点 key为子节点的路由路径 value为路径对应子节点
+	wildcardChild *node            // wildcardChild 通配符子节点
+	paramChild    *node            // paramChild 参数路由子节点
+	HandleFunc                     // HandleFunc 路由对应的处理函数
+}
+```
+
+#### 7.2.2 定义测试用例
+
+`router_test.go`
+
+```go
+func TestRouter_addParamRoute(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []TestNode{
+		{
+			method: http.MethodGet,
+			path:   "/order/detail/:id",
+		},
+	}
+
+	r := newRouter()
+	mockHandleFunc := func(ctx *Context) {}
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandleFunc)
+	}
+
+	// step2. 验证路由树
+	wantRoute := &router{
+		trees: map[string]*node{
+			http.MethodGet: &node{
+				path: "/",
+				children: map[string]*node{
+					"order": &node{
+						path: "order",
+						children: map[string]*node{
+							"detail": &node{
+								path:          "detail",
+								children:      nil,
+								wildcardChild: nil,
+								paramChild: &node{
+									path:          ":id",
+									children:      nil,
+									wildcardChild: nil,
+									paramChild:    nil,
+									HandleFunc:    mockHandleFunc,
+								},
+								HandleFunc: nil,
+							},
+						},
+						wildcardChild: nil,
+						paramChild:    nil,
+						HandleFunc:    nil,
+					},
+				},
+				wildcardChild: nil,
+				paramChild:    nil,
+				HandleFunc:    nil,
+			},
+		},
+	}
+
+	msg, equal := wantRoute.equal(r)
+	assert.True(t, equal, msg)
+}
+```
+
+#### 7.2.3 修改创建子节点的逻辑
+
+`node.go`:
+
+```go
+// findOrCreate 本方法用于根据给定的path值 在当前节点的子节点中查找path为给定path值的节点
+// 找到则返回 未找到则创建
+func (n *node) findOrCreate(segment string) *node {
+	// 若路径以:开头 则查找或创建参数子节点
+	if strings.HasPrefix(segment, ":") {
+		if n.paramChild == nil {
+			n.paramChild = &node{
+				path: segment,
+			}
+		}
+		return n.paramChild
+	}
+
+	// 若路径为* 则查找或创建通配符子节点
+	if segment == "*" {
+		if n.wildcardChild == nil {
+			n.wildcardChild = &node{
+				path: "*",
+			}
+		}
+		return n.wildcardChild
+	}
+
+	if n.children == nil {
+		n.children = make(map[string]*node)
+	}
+
+	target, exist := n.children[segment]
+	if !exist {
+		// 当前节点的子节点映射中不存在目标子节点 则创建目标子节点 将子节点加入当前节点的子节点映射后返回
+		target = &node{
+			path: segment,
+		}
+		n.children[segment] = target
+		return target
+	}
+
+	// 当前节点的子节点映射中存在目标子节点 则直接返回
+	return target
+}
+```
+
+#### 7.2.4 修改判断子节点相等的逻辑
+
+`router_test.go`:
+
+```go
+func (n *node) equal(target *node) (msg string, ok bool) {
+	// step1. 目标节点为空 则必然不等
+	if target == nil {
+		msg = "目标节点为nil"
+		return msg, false
+	}
+
+	// step2. 比较节点的路径是否相同
+	if n.path != target.path {
+		msg = fmt.Sprintf("节点的路径不等, 期望节点的路径为: %s, 目标节点的路径为: %s", n.path, target.path)
+		return msg, false
+	}
+
+	// step3. 比较2个节点的子节点数量是否相同
+	if len(n.children) != len(target.children) {
+		msg = fmt.Sprintf("节点的子节点数量不等, 期望节点的子节点数量为: %d, 目标节点的子节点数量为: %d", len(n.children), len(target.children))
+		return msg, false
+	}
+
+	// step4. 比对2个节点的参数子节点是否相同
+	if n.paramChild != nil {
+		if target.paramChild == nil {
+			msg = fmt.Sprintf("目标节点的参数节点为空")
+			return msg, false
+		}
+		_, equal := n.paramChild.equal(target.paramChild)
+		if !equal {
+			msg = fmt.Sprintf("期望节点 %s 的参数子节点与目标节点 %s 的参数子节点不等", n.path, target.path)
+			return msg, false
+		}
+	}
+
+	// step5. 比较2个节点的通配符子节点是否相同
+	if n.wildcardChild != nil {
+		if target.wildcardChild == nil {
+			msg = fmt.Sprintf("目标节点的通配符子节点为空")
+			return msg, false
+		}
+		_, equal := n.wildcardChild.equal(target.wildcardChild)
+		if !equal {
+			msg = fmt.Sprintf("期望节点 %s 的通配符子节点与目标节点 %s 的通配符子节点不等", n.path, target.path)
+			return msg, false
+		}
+	}
+
+	// step5. 比较2个节点的处理函数是否相同
+	wantHandler := reflect.ValueOf(n.HandleFunc)
+	targetHandler := reflect.ValueOf(target.HandleFunc)
+	if wantHandler != targetHandler {
+		msg = fmt.Sprintf("节点的处理函数不等, 期望节点 %s 的处理函数为: %v, 目标节点 %s 的处理函数为: %v", n.path, wantHandler, target.path, targetHandler)
+		return msg, false
+	}
+
+	// step6. 比较2个节点的子节点是否相同
+	for path, child := range n.children {
+		// step6.1 比对2个节点的子节点的路径是否相同
+		dstChild, exist := target.children[path]
+		if !exist {
+			msg = fmt.Sprintf("目标节点中不存在路径为: %s 的子节点", path)
+			return msg, false
+		}
+
+		// step6.2 对路径相同的子节点递归比对
+		msg, equal := child.equal(dstChild)
+		if !equal {
+			return msg, false
+		}
+	}
+
+	return "", true
+}
+```
+
+### 7.3 参数路由的校验
+
+#### 7.3.1 实现校验逻辑
+
+设计中是不准备支持同样的参数路由和通配符路由一起注册的(即`/user/*`和`/user/:id`).
+
+所以从逻辑上来讲,只需要实现:**注册参数路由时检测通配符路由是否存在;注册通配符路由时检测参数路由是否存在.若对方存在,则不允许注册即可**.
+
+`node.go`
+
+```go
+// findOrCreate 本方法用于根据给定的path值 在当前节点的子节点中查找path为给定path值的节点
+// 找到则返回 未找到则创建
+func (n *node) findOrCreate(segment string) *node {
+	// 若路径以:开头 则查找或创建参数子节点
+	if strings.HasPrefix(segment, ":") {
+		if n.wildcardChild != nil {
+			msg := fmt.Sprintf("web: 非法路由,节点 %s 已有通配符路由.不允许同时注册通配符路由和参数路由", n.path)
+			panic(msg)
+		}
+
+		if n.paramChild == nil {
+			n.paramChild = &node{
+				path: segment,
+			}
+		}
+		return n.paramChild
+	}
+
+	// 若路径为* 则查找或创建通配符子节点
+	if segment == "*" {
+		if n.paramChild != nil {
+			msg := fmt.Sprintf("web: 非法路由,节点 %s 已有参数路由.不允许同时注册通配符路由和参数路由", n.path)
+			panic(msg)
+		}
+		
+		if n.wildcardChild == nil {
+			n.wildcardChild = &node{
+				path: "*",
+			}
+		}
+		return n.wildcardChild
+	}
+
+	if n.children == nil {
+		n.children = make(map[string]*node)
+	}
+
+	target, exist := n.children[segment]
+	if !exist {
+		// 当前节点的子节点映射中不存在目标子节点 则创建目标子节点 将子节点加入当前节点的子节点映射后返回
+		target = &node{
+			path: segment,
+		}
+		n.children[segment] = target
+		return target
+	}
+
+	// 当前节点的子节点映射中存在目标子节点 则直接返回
+	return target
+}
+```
+
+#### 7.3.2 测试
+
+`router_test.go`:
+
+```go
+func TestRouter_findRoute_param_and_wildcard_coexist(t *testing.T) {
+	// step1. 注册通配符路由
+	r := newRouter()
+	mockHandleFunc := func(ctx *Context) {}
+	r.addRoute(http.MethodGet, "/user/*", mockHandleFunc)
+
+	// step2. 断言非法注册
+	panicFunc := func() {
+		r.addRoute(http.MethodGet, "/user/:id", mockHandleFunc)
+	}
+
+	assert.Panicsf(t, panicFunc, "web: 非法路由,节点 detail 已有通配符路由.不允许同时注册通配符路由和参数路由")
+}
+```
 
 
 
